Fix chart grid overflow properly with min-width: 0

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -657,6 +657,7 @@ p {
   display: flex;
   flex-direction: column;
   min-height: 100%;
+  min-width: 0;
 }
 
 .chart-container {
